[tool.poetry]
name = "ttp101"
version = "0.1.0"
description = ""
authors = ["ubaumann <github@m.ubaumann.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
pyaml = "^20.4.0"
gunicorn = "^20.1.0"
ttp = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylama = "^7.7.1"
rich = "^10.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
